tests/snapshots/raw__examples_in_informal_reference-26.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"static\")"
---
Ok(
    [
        Token {
            class: identifier,
            length: 6,
        },
    ],
)
