tests/snapshots/raw__examples_in_informal_reference-27.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"struct\")"
---
Ok(
    [
        Token {
            class: identifier,
            length: 6,
        },
    ],
)
