tests/snapshots/raw__examples_in_informal_reference-28.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"super\")"
---
Ok(
    [
        Token {
            class: identifier,
            length: 5,
        },
    ],
)
