tests/snapshots/raw__examples_in_informal_reference-32.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"unsafe\")"
---
Ok(
    [
        Token {
            class: identifier,
            length: 6,
        },
    ],
)
