tests/snapshots/raw__examples_in_informal_reference-36.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"async\")"
---
Ok(
    [
        Token {
            class: identifier,
            length: 5,
        },
    ],
)
